<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/commonBg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="120dp"
        android:paddingTop="30dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

        <LinearLayout
            style="@style/HomeLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/rate_app"
                style="@style/HomeBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/rate_app"
                android:src="@drawable/ic_rate"/>

            <ImageButton
                android:id="@+id/share"
                style="@style/HomeBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/share"
                android:src="@drawable/ic_share"/>

            <ImageButton
                android:id="@+id/warning"
                style="@style/HomeBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/warning"
                android:src="@drawable/ic_warning"/>

            <ImageButton
                android:id="@+id/tips"
                style="@style/HomeBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/tips"
                android:src="@drawable/ic_tips"/>

        </LinearLayout>

        <LinearLayout
            style="@style/HomeLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageButton
                android:id="@+id/play"
                android:background="@drawable/btn_play"
                style="@style/HomeBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/play"
                android:src="@drawable/ic_play"/>
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
